--- a/tentang/galeri.njk
+++ b/tentang/galeri.njk
@@ -1,7 +1,7 @@
 ---
 layout : tataletak.njk
 namakamu : Aldi Indrawan
-foto :  C:\Users\USER\tugas1_14117055\14117055-PWL\assets\img\011.jpg
+foto :  \assets\img\011.jpg
 ---
 
 <h3> ini galeri saya </h3>
