--- a/tentang/galeri.njk
+++ b/tentang/galeri.njk
@@ -6,4 +6,4 @@ foto :  \assets\img\011.jpg
 
 <h3> ini galeri saya </h3>
 <h1> {{namakamu}} </h1>
-<img src="{{foto}}"  height="500" width="500"</h1>
+<img src="{{foto}}" width="50%" height="50%">
